@@ -1,13 +1,15 @@
 package org.esa.snap.vfs.remote;
 
-import org.apache.commons.io.IOUtils;
 import org.esa.snap.core.util.StringUtils;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.util.logging.Logger;
 
 /**
@@ -25,14 +27,19 @@ public class HttpUtils {
     }
 
     public static RegularFileMetadata readRegularFileMetadata(String urlAddress, IRemoteConnectionBuilder remoteConnectionBuilder, String fileSystemRoot) throws IOException {
-        URL fileURL = new URL(urlAddress);
+        final URL fileURL;
+        try {
+            fileURL = new URI(urlAddress).toURL();
+        } catch (URISyntaxException e) {
+            throw new IOException(e);
+        }
         HttpURLConnection connection = remoteConnectionBuilder.buildConnection(fileSystemRoot, fileURL, "GET", null);
         try {
             int responseCode = connection.getResponseCode();
             if (HttpUtils.isValidResponseCode(responseCode)) {
                 String sizeString = connection.getHeaderField("content-length");
                 String lastModified = connection.getHeaderField("last-modified");
-                if (!StringUtils.isNotNullAndNotEmpty(sizeString) || !StringUtils.isNotNullAndNotEmpty(lastModified)) {
+                if (!StringUtils.isNotNullAndNotEmpty(sizeString) || !StringUtils.isNotNullAndNotEmpty(lastModified) || urlAddress.endsWith("/")) {
                     if (!connection.getURL().toString().contentEquals(urlAddress)) {
                         throw new IOException("Invalid VFS service.\nReason: Redirect from: " + urlAddress + " to: " + connection.getURL().toString());
                     }
@@ -41,14 +48,16 @@ public class HttpUtils {
                 long size = Long.parseLong(sizeString);
                 return new RegularFileMetadata(urlAddress, lastModified, size);
             } else {
-                Logger.getLogger(HttpUtils.class.getName()).warning("HTTP error response:");
-                Logger.getLogger(HttpUtils.class.getName()).warning(() -> {
-                    try {
-                        return IOUtils.toString(connection.getErrorStream(), "UTF-8");
-                    } catch (IOException ignored) {
-                    }
-                    return "";
-                });
+                if (responseCode != 404) {
+                    Logger.getLogger(HttpUtils.class.getName()).warning("HTTP error response:");
+                    Logger.getLogger(HttpUtils.class.getName()).warning(() -> {
+                        try {
+                            return HttpUtils.readString(connection.getErrorStream());
+                        } catch (IOException ignored) {
+                        }
+                        return "";
+                    });
+                }
                 throw new IOException(urlAddress + ": response code " + responseCode + ": " + connection.getResponseMessage());
             }
         } finally {
@@ -57,7 +66,12 @@ public class HttpUtils {
     }
 
     public static String readResponse(String urlAddress, IRemoteConnectionBuilder remoteConnectionBuilder, String fileSystemRoot) throws IOException {
-        URL pageURL = new URL(urlAddress);
+        final URL pageURL;
+        try {
+            pageURL = new URI(urlAddress).toURL();
+        } catch (URISyntaxException e) {
+            throw new IOException(e);
+        }
         HttpURLConnection connection = remoteConnectionBuilder.buildConnection(fileSystemRoot, pageURL, "GET", null);
         try {
             int responseCode = connection.getResponseCode();
@@ -69,13 +83,13 @@ public class HttpUtils {
                     while ((length = inputStream.read(buffer)) != -1) {
                         result.write(buffer, 0, length);
                     }
-                    return result.toString("UTF-8");
+                    return result.toString(StandardCharsets.UTF_8);
                 }
             } else {
                 Logger.getLogger(HttpUtils.class.getName()).warning("HTTP error response:");
                 Logger.getLogger(HttpUtils.class.getName()).warning(() -> {
                     try {
-                        return IOUtils.toString(connection.getErrorStream(), "UTF-8").replaceAll("<AWSAccessKeyId>.*</AWSAccessKeyId>","<AWSAccessKeyId>***</AWSAccessKeyId>");
+                        return HttpUtils.readString(connection.getErrorStream()).replaceAll("<AWSAccessKeyId>.*</AWSAccessKeyId>","<AWSAccessKeyId>***</AWSAccessKeyId>");
                     } catch (IOException ignored) {
                     }
                     return "";
@@ -85,5 +99,9 @@ public class HttpUtils {
         } finally {
             connection.disconnect();
         }
+    }
+
+    public static String readString(InputStream inputStream) throws IOException {
+        return new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
     }
 }
